1-ContainerPlatform/Ci-Cd/app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-demo
spec:
  to:
    kind: Service
    name: gitops-demo
  port:
    targetPort: http
  tls:
    termination: edge
